hphp/hack/test/typecheck/new_inference/nothing/toplevel.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): \nothing {
  return test();
}
